netsci food trucks edit
netsci food trucks edit

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -4140,7 +4140,7 @@
 					<key>page37 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-07T23:04:13Z</date>
+						<date>2019-05-20T20:13:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4239,11 +4239,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cNvKN490CU3j
-								4xCnikm8MA==
+								nI94aqbdT00v
+								qE4IMKN/PQ==
 								</data>
 								<key>Size</key>
-								<integer>198528</integer>
+								<integer>203984</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -4259,11 +4259,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WLGU+ssqAIql
-								BEoH/uaogQ==
+								k2INUxFJcbrY
+								VKquV+gKrg==
 								</data>
 								<key>Size</key>
-								<integer>100756</integer>
+								<integer>104180</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6788,7 +6788,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-15T21:57:19Z</date>
+						<date>2019-05-20T20:13:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6817,21 +6817,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -7017,11 +7017,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OadahfBF9CAC
-								mlKNwlwhgA==
+								f4wv5TDY8f56
+								IoEA1WIV1w==
 								</data>
 								<key>Size</key>
-								<integer>191421</integer>
+								<integer>185965</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -7037,11 +7037,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Rc71MYXvY4CD
-								FLRJj1J0yQ==
+								/0jVeb7XQ+LI
+								L6qJzp5iaA==
 								</data>
 								<key>Size</key>
-								<integer>135770</integer>
+								<integer>132346</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8216,7 +8216,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T15:03:06Z</date>
+						<date>2019-05-20T20:10:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8735,11 +8735,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vg9SvEn2Li9B
-								c1wwTckMMA==
+								EXgGp1BO7NYl
+								F+9r+2QgRQ==
 								</data>
 								<key>Size</key>
-								<integer>801507</integer>
+								<integer>801575</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14780,7 +14780,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T14:03:13Z</date>
+						<date>2019-05-20T20:13:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14809,11 +14809,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7lLZ6PfKx8OF
-								ocEx83puGw==
+								pjhtTPciC7AI
+								TkYyz4p0NQ==
 								</data>
 								<key>Size</key>
-								<integer>5537</integer>
+								<integer>5569</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14892,7 +14892,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T15:03:06Z</date>
+						<date>2019-05-20T20:13:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15931,11 +15931,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								BpmmJKdAsS8N
-								fBWPEWSJIQ==
+								3QVsjwT3bTFD
+								RJttC++cZw==
 								</data>
 								<key>Size</key>
-								<integer>3785</integer>
+								<integer>4636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16079,7 +16079,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFJfJcC44qADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFJoOv0AXGADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16089,14 +16089,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUl8lwLk
-				84AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUmg6/QC
+				KoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSXyXAuU2
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSaDr9AJ+
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16106,7 +16106,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSXyXAuVggAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSaDr9AKngAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16116,7 +16116,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBSXyXAuWKgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBSaDr9ALRgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
