--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-15T21:57:19Z</date>
+						<date>2019-05-20T20:13:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -64,21 +64,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OadahfBF9CAC
-								mlKNwlwhgA==
+								f4wv5TDY8f56
+								IoEA1WIV1w==
 								</data>
 								<key>Size</key>
-								<integer>191421</integer>
+								<integer>185965</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -284,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Rc71MYXvY4CD
-								FLRJj1J0yQ==
+								/0jVeb7XQ+LI
+								L6qJzp5iaA==
 								</data>
 								<key>Size</key>
-								<integer>135770</integer>
+								<integer>132346</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
