--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/8-Skratch/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-07T23:04:13Z</date>
+						<date>2019-05-20T20:13:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cNvKN490CU3j
-								4xCnikm8MA==
+								nI94aqbdT00v
+								qE4IMKN/PQ==
 								</data>
 								<key>Size</key>
-								<integer>198528</integer>
+								<integer>203984</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WLGU+ssqAIql
-								BEoH/uaogQ==
+								k2INUxFJcbrY
+								VKquV+gKrg==
 								</data>
 								<key>Size</key>
-								<integer>100756</integer>
+								<integer>104180</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
