--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T15:03:06Z</date>
+						<date>2019-05-20T20:10:12Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vg9SvEn2Li9B
-								c1wwTckMMA==
+								EXgGp1BO7NYl
+								F+9r+2QgRQ==
 								</data>
 								<key>Size</key>
-								<integer>801507</integer>
+								<integer>801575</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
