--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T23:24:29Z</date>
+						<date>2019-05-21T13:23:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rx32Ah9ti7Ak
-								FjRhrEveVg==
+								gpr1Fkml+exY
+								1jmPKAcFeg==
 								</data>
 								<key>Size</key>
-								<integer>803106</integer>
+								<integer>803064</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
