--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-07T22:45:57Z</date>
+						<date>2019-05-21T13:23:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,21 +84,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -634,8 +634,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ORTKeqZDJg62
-								dDj3utKUlw==
+								3E3n7K1MXXzw
+								xJ9KX8H7fQ==
 								</data>
 								<key>Size</key>
 								<integer>254720</integer>
@@ -654,11 +654,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hnLsWcADUMde
-								2pH844tDvA==
+								cmwCySzd4EL2
+								dP5F9yYsMQ==
 								</data>
 								<key>Size</key>
-								<integer>167386</integer>
+								<integer>167344</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
