--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-10T18:02:40Z</date>
+						<date>2019-05-21T13:23:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,21 +94,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0a2e163-328x500.jpg</key>
 							<dict>
@@ -1014,11 +1014,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								joWYrMHw8knM
-								Ibd7f0AxWQ==
+								OaaxYQtBwvAG
+								XoDT8+G4Zw==
 								</data>
 								<key>Size</key>
-								<integer>386507</integer>
+								<integer>387581</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -1034,11 +1034,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TlL6AAkfDXLu
-								vBRlB2ETgA==
+								Q1oGXCBpK9db
+								EOSLQfCihA==
 								</data>
 								<key>Size</key>
-								<integer>296837</integer>
+								<integer>297619</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
