changes talk from fri to weds netsci
changes talk from fri to weds netsci 57

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8216,7 +8216,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T13:23:05Z</date>
+						<date>2019-05-21T14:27:46Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8715,8 +8715,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								26ijAW3X+ar8
-								5ufoO3/1KA==
+								H0kCjr0nDk/8
+								tfknDQp8Gg==
 								</data>
 								<key>Size</key>
 								<integer>403940</integer>
@@ -8725,8 +8725,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hVMME0GykJ1U
-								NC5xcFwMPA==
+								TMGRMNTgC7W3
+								kEN22IhgQQ==
 								</data>
 								<key>Size</key>
 								<integer>67521</integer>
@@ -8735,8 +8735,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gpr1Fkml+exY
-								1jmPKAcFeg==
+								8Fp4UJ/md+6e
+								VfBKqlRdKg==
 								</data>
 								<key>Size</key>
 								<integer>803064</integer>
@@ -14780,7 +14780,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T13:30:54Z</date>
+						<date>2019-05-21T14:27:46Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14809,11 +14809,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dZcOSF9uQzic
-								6oj5wx+VLg==
+								7lLZ6PfKx8OF
+								ocEx83puGw==
 								</data>
 								<key>Size</key>
-								<integer>5665</integer>
+								<integer>5537</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14892,7 +14892,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T13:30:54Z</date>
+						<date>2019-05-21T14:27:46Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15931,11 +15931,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VDJ9Pp75T6kW
-								iWm8+qlngA==
+								qslQjyJ7XKKX
+								3jzkAG55dg==
 								</data>
 								<key>Size</key>
-								<integer>4636</integer>
+								<integer>3785</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16079,7 +16079,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFKGoi8pEyADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFKIVP1nVaADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16089,14 +16089,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUoaiLyk
-				7IAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUohU/We
+				YoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBShqIvKUe
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSiFT9Z62
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16106,7 +16106,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBShqIvKVZgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSiFT9Z7xgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16116,7 +16116,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBShqIvKWUgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBSiFT9Z8jgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
