--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T13:23:05Z</date>
+						<date>2019-05-21T14:27:46Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -534,8 +534,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								26ijAW3X+ar8
-								5ufoO3/1KA==
+								H0kCjr0nDk/8
+								tfknDQp8Gg==
 								</data>
 								<key>Size</key>
 								<integer>403940</integer>
@@ -544,8 +544,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hVMME0GykJ1U
-								NC5xcFwMPA==
+								TMGRMNTgC7W3
+								kEN22IhgQQ==
 								</data>
 								<key>Size</key>
 								<integer>67521</integer>
@@ -554,8 +554,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gpr1Fkml+exY
-								1jmPKAcFeg==
+								8Fp4UJ/md+6e
+								VfBKqlRdKg==
 								</data>
 								<key>Size</key>
 								<integer>803064</integer>
